syntax = "proto3";
package xsuportal.proto.services.registration;
option go_package = "github.com/isucon/isucon10-final/proto/services/registraiton";

import "xsuportal/resources/team.proto";

// query parameter
message GetRegistrationSessionQuery {
  int64 team_id = 1;
  string invite_token = 2;
}

message GetRegistrationSessionResponse {
  xsuportal.proto.resources.Team team = 1;
  enum Status {
    CLOSED = 0;
    NOT_JOINABLE = 1;
    NOT_LOGGED_IN = 2;
    CREATABLE = 3;
    JOINABLE = 4;
    JOINED = 5;
  }
  Status status = 2;
  string github_login = 3;
  string github_avatar_url = 4;
  string discord_tag = 5;
  string discord_avatar_url = 6;
  string member_invite_url = 7;
  string discord_server_id = 8;
}


message UpdateRegistrationRequest {
  string team_name = 1;
  string name = 2; // contestant name
  string email_address = 3;
  bool is_student = 4;
}

message UpdateRegistrationResponse {
}


message DeleteRegistrationRequest {
}

message DeleteRegistrationResponse {
}

